--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,22 @@
 page-home {
 
+  #container-list {
+    .margin-top{
+      height: 56px;
+    }
+
+    .list-item{
+      height: 100px;
+
+      .border-left{
+        width: 5px;
+        height: 100%;    
+      }
+      .details-run{
+        img .geo-img{
+          height: 9px;
+        }
+      }
+    }
+  }
 }
