--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -6,15 +6,42 @@ page-home {
     }
 
     .list-item{
-      height: 100px;
+      padding-left: 0px;
+      height: 87px;
+      display: block;
+      border-bottom: 1px solid rgba(0,0,0,0.1);
 
       .border-left{
         width: 5px;
-        height: 100%;    
+        height: 87px;
+        background-color: red;
+        margin-right: 10px;
+        display: inline-block;
       }
-      .details-run{
-        img .geo-img{
-          height: 9px;
+
+      .content-right{
+        display: inline-block;
+        height: 47px;
+        margin-top: 15px;
+        margin-bottom: 15px;
+        vertical-align: top;
+
+        .details-run{
+          display: block;
+
+          .light-date{
+            color: rgba(0,0,0,0.5);
+          }
+          svg {
+            height: 11px;
+            opacity: 0.7;
+          }
+        }
+
+        .title-run{
+          display: block;
+          font-size: 25px;
+          margin-top: 10px;
         }
       }
     }
