--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,22 +1,79 @@
 page-login {
   position: relative;
-
-  .qrcode {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 170px;
-    height: 60px;
-    margin-left: -85px;
-    margin-top: -30px;
+  #bg-login{
+    min-width: 100%;
+    min-height: 100%;
+    position: fixed;
+    z-index: -1;
   }
 
-  .manualinput {
-    position: absolute;
-    top: 70%;
-    left: 15%;
-    width: 70%;
-    height: 35px;
-    margin-top: -17.5px;
+  #container-logo {
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    top: 0px;
+    z-index: 10;
+
+      #logo-login{
+        width: 50%;
+        margin-top: 10px;
+      }
+  }
+
+  #container-login{
+    position: fixed;
+    margin-left: calc(50% - 115px);
+    text-align: center;
+    top: 0px;
+    height: 100%;
+
+    #margin-top{
+      height: calc(50% - 96px);
+      width: 100%;
+    }
+
+    #or-login{
+      font-size: 23px;
+      text-shadow: 0 0 5px rgba(0,0,0,0.3);
+      color: white;
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+    .qrcode {
+      width: 230px;
+      height: 60px;
+      background: #0090BF;
+      color: white;
+      font-size: 23px;
+      font-weight: bold;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-top: 7.5px;
+      padding-bottom: 7.5px;
+      border-radius: 4px;
+      box-shadow: -2px 2px 20px rgba(0,0,0,0.7);
+    }
+
+    #manual-input {
+      width: 160px;
+      height: 60px;
+      padding-left: 15px;
+      padding-right: 15px;
+      padding-top: 7.5px;
+      padding-bottom: 7.5px;
+      border-radius: 4px;
+      box-shadow: -2px 2px 20px rgba(0,0,0,0.7);
+      border: none;
+      margin-right: 10px;
+    }
+
+    #manual-submit{
+      width: 60px;
+      height: 60px;
+      background: #0090BF;
+      color: white;
+      border-radius: 5px;
+      box-shadow: -2px 2px 20px rgba(0,0,0,0.7);
+    }
   }
 }
