--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -22,16 +22,21 @@ page-runs {
       .content-right{
         display: inline-block;
         height: 47px;
+        width: 90%;
         margin-top: 15px;
         margin-bottom: 15px;
         vertical-align: top;
 
         .details-run{
           display: block;
+          width: 90%;
+          overflow: hidden;
+          height: 16px;
 
           .light-date{
             color: rgba(0,0,0,0.5);
           }
+
           svg {
             height: 11px;
             opacity: 0.7;
@@ -42,6 +47,9 @@ page-runs {
           display: block;
           font-size: 25px;
           margin-top: 10px;
+          height: 29px;
+          width: 90%;
+          overflow: hidden;
         }
       }
     }
