--- a/src/pages/run/run.scss
+++ b/src/pages/run/run.scss
@@ -1,7 +1,12 @@
 page-run {
   #container-list {
+    margin-bottom: 30px;
+
     .margin-top{
-      height: 56px;
+      height: 44px;
+    }
+    .margin-bottom{
+      height: 30px;
     }
 
     .list-item{
@@ -13,10 +18,20 @@ page-run {
       .border-left{
         width: 5px;
         height: 87px;
-        background-color: red;
         margin-right: 10px;
         display: inline-block;
       }
+
+      .red{
+        background-color: red;
+        box-shadow: 0 0 6px rgba(255,0,0,0.3);
+      }
+
+      .green{
+        background-color: rgb(0,250,80);
+        box-shadow: 0 0 6px rgba(0,250,80,0.3);
+      }
+
 
       .content-right{
         display: inline-block;
@@ -45,13 +60,58 @@ page-run {
           display: block;
           font-size: 25px;
           margin-bottom: 10px;
+          text-shadow: 0 0 6px rgba(0,0,0,0.2);
         }
       }
+    }
+
+    .containerStep{
+      width: 100%;
+      padding: 15px;
+      padding-top: 0px;
+      padding-bottom: 0px;
+
+      .step{
+        width: 100%;
+        margin-top: -5px;
+
+        .containerRoad{
+          width: 20px;
+          display: inline-block;
+          height: 100%;
+
+          .stick{
+            width: 4px;
+            margin: 0 auto;
+            height: 25px;
+            background-color: rgba(0,0,0,0.8);
+          }
+          .round{
+            width: 12px;
+            height: 12px;
+            border-radius: 15px;
+            margin: 0 auto;
+            background-color: rgba(255,255,255,1);
+            border: 4px solid rgba(0,0,0,0.8);
+          }
+
+        }
+
+        .destination{
+          display: inline-block;
+          margin-top: 10px;
+          font-size: 16px;
+          color: rgba(0,0,0,0.8);
+        }
+      }
+
+
     }
 
     table {
       margin-left: 15px;
       margin-right: 15px;
+      margin-top: 15px;
       font-size: 17px;
 
       tr{
@@ -62,7 +122,8 @@ page-run {
         }
         .title-td{
           color: rgba(0,0,0,0.5);
-          min-width: 150px;
+          width: 40%;
+          max-width: 150px;
         }
       }
     }
@@ -95,4 +156,12 @@ page-run {
       width: 220px;
     }
   }
+}
+
+.toolbar-md{
+  min-height: 44px;
+}
+
+ion-header {
+  height: 44px;
 }
