--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -5,6 +5,10 @@ page-runs {
       height: 48px;
     }
 
+    .scroll-content{
+      margin-bottom: 0px;
+    }
+
     .list-item{
       padding-left: 0px;
       display: block;
