--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,3 +1,52 @@
 page-login {
+  #container-logo {
+    width: 100%;
+    text-align: center;
+    position: fixed;
+    z-index: 2;
 
+    #logo-login {
+      width: 40%;
+      max-width: 100px;
+      margin-top: 10px;
+    }
+  }
+
+  .qrcode {
+    background: #0090BF;
+    color: white;
+    font-size: 23px;
+    font-weight: bold;
+    padding: 7.5px 15px 7.5px 15px;
+    border-radius: 4px;
+    box-shadow: -2px 2px 20px rgba(0,0,0,0.7);
+  }
+
+  #manual-input {
+    width: 160px;
+    height: 60px;
+    padding: 7.5px 15px 7.5px 15px;
+    border-radius: 4px;
+    box-shadow: -2px 2px 20px rgba(0,0,0,0.7);
+    border: none;
+    margin-right: 10px;
+  }
+
+  #manual-submit {
+    font-size: 15px;
+    width: 60px;
+    height: 60px;
+    background: #0090BF;
+    color: white;
+    border-radius: 4px;
+    box-shadow: -2px 2px 20px rgba(0,0,0,0.7);
+  }
+
+  #bg-login {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background: url(../assets/bg.png) no-repeat center fixed;
+    background-size: cover;
+  }
 }
