update vehicle view

--- a/src/pages/vehicles/vehicles.scss
+++ b/src/pages/vehicles/vehicles.scss
@@ -1,9 +1,6 @@
 page-vehicles {
 
-  @each $status, $value in map-remove($vehicleStatus) {
-    ion-item[status=#{$status}] ion-note {
-      color: $value;
+    .free {
+        color: #69bb7b;
     }
-  }
-
 }
