--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -17,8 +17,10 @@
 
 $runStatus: (
   empty: transparent,
-  beingFilledIn: #fd8b2d,
+  organizing-users: #fd8b2d,
+  organizing-vehicles: #fd8b2d,
   ready: #69bb7b,
   inProgress: #69bb7b,
   completed: #69bb7b,
+  problem: #ff0000,
 );
