Added InternetStatusProvider usage

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,3 +24,9 @@ $runStatus: (
   completed: #69bb7b,
   problem: #ff0000,
 );
+
+.wifi-status {
+    float: right;
+    margin-right: 15px;
+    color: #ff0000;
+}
