--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -1,10 +1,13 @@
 page-runs {
-
   @each $status, $value in map-remove($runStatus) {
-    ion-item[status=#{$status}] ion-label {
+    ion-item[status='#{$status}'] ion-label {
       border-left: 2px solid $value;
       padding-left: 10px;
     }
   }
 
+  .open-filters {
+    float: right;
+    margin-right: 15px;
+  }
 }
