Added click event on filters

--- a/src/pages/filters/filters.scss
+++ b/src/pages/filters/filters.scss
@@ -20,7 +20,9 @@
   border: none !important;
   font-size: 25px;
   background: none;
-  color: #fff;
+  a {
+    color: #fff;
+  }
   .item-inner {
     border: none !important;
   }
