Added filters to runs page and removed button to open modal

--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -10,4 +10,17 @@ page-runs {
     float: right;
     margin-right: 15px;
   }
+
+  .filters {
+    .filter,
+    ion-label {
+      display: inline-block;
+    }
+
+    ion-label {
+      margin-top: 0;
+      margin-bottom: 0;
+      margin-left: 5px;
+    }
+  }
 }
