Removed date from run item and aligned time on the top right

--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -23,4 +23,15 @@ page-runs {
       margin-left: 5px;
     }
   }
+
+  .run {
+    .run__title {
+      display: inline-block;
+    }
+
+    .run__time {
+      display: inline-block;
+      float: right;
+    }
+  }
 }
