--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -24,6 +24,26 @@ page-runs {
     }
   }
 
+  .filter__urgent {
+    font-family: inherit;
+    font-size: 11px;
+    width: 25px;
+    height: 25px;
+    padding-top: 8px;
+    border-radius: 15px;
+    background-color: $error;
+    text-align: center;
+    color: #fff;
+  }
+
+  .filter__urgent--enabled {
+    background-color: transparent;
+    border: 0.2rem solid $error;
+    color: $error;
+    padding-top: 6px;
+    font-weight: bold;
+  }
+
   .run {
     .run__title {
       display: inline-block;
