--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -31,5 +31,8 @@ $runStatus: (
 .wifi-status {
   float: right;
   margin-right: 15px;
+  font-size: 16px;
+  margin-top: auto;
+  margin-bottom: auto;
   color: $error;
 }
