--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -34,6 +34,7 @@ page-runs {
     background-color: $error;
     text-align: center;
     color: #fff;
+    margin-left: 40px;
   }
 
   .filter__urgent--enabled {
