Refactored title bar

--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -34,7 +34,8 @@ page-runs {
     background-color: $error;
     text-align: center;
     color: #fff;
-    margin-left: 40px;
+    margin-right: 10px;
+    float: right;
   }
 
   .filter__urgent--enabled {
@@ -48,9 +49,8 @@ page-runs {
   .run {
     .row {
       margin-top: -6px;
-
     }
-    .row:last-of-type{
+    .row:last-of-type {
       margin-bottom: -6px;
     }
     .col {
@@ -58,7 +58,7 @@ page-runs {
       text-align: left;
     }
     .grid {
-      padding: 0!important;
+      padding: 0 !important;
     }
     .run__title {
       //display: inline-block;
@@ -68,7 +68,7 @@ page-runs {
       //display: inline-block;
       float: right;
     }
-    .run__waypoint{
+    .run__waypoint {
       //display: inline-block;
     }
     .run__mine {
