Changed filter checkboxes to buttons

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,7 +18,8 @@ $warning: #fd8b2d;
 $error: #ff0000;
 $great: #69bb7b;
 $ended: #ce50e1;
-$darken: rgba(0,0,0,.1);
+$darken: rgba(0, 0, 0, 0.1);
+$blue: #387ef5;
 
 $runStatus: (
   empty: $darken,
