--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -12,6 +12,9 @@ page-runs {
   }
 
   .filters {
+    display: flex;
+    justify-content: space-around;
+
     .filter,
     ion-label {
       display: inline-block;
@@ -21,6 +24,20 @@ page-runs {
       margin-top: 0;
       margin-bottom: 0;
       margin-left: 5px;
+    }
+
+    .filter__item {
+      padding: 7px;
+      border-radius: 3px;
+      width: 100px;
+      background-color: $blue;
+      color: #fff;
+
+      &.filter__item--enabled {
+        background-color: #fff;
+        color: $blue;
+        border: 1px solid $blue;
+      }
     }
   }
 
