fix for runs title bar

--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -6,6 +6,10 @@ page-runs {
     }
   }
 
+  .runs-title-fix{
+    display: inline-flex;
+  }
+
   .open-filters {
     float: right;
     margin-right: 15px;
