added cursor pointer for urgent filter

--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -57,6 +57,7 @@ page-runs {
     color: #fff;
     margin-right: 10px;
     float: right;
+    cursor: pointer;
   }
 
   .filter__urgent--enabled {
