--- a/src/pages/runs/runs.scss
+++ b/src/pages/runs/runs.scss
@@ -32,8 +32,10 @@ page-runs {
 
     .filter__item {
       padding: 7px;
-      border-radius: 3px;
-      width: 90px;
+      border-radius: 25px;
+      width: 40px;
+      height: 40px;
+      font-size: 18px;
       background-color: $blue;
       color: #fff;
         border: 1px solid $blue;
