--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,20 +1,18 @@
 page-home {
-  #mainMenu{
-
-    ion-header{
-      background: #f7f7f7;
+  #mainMenu {
+    ion-header {
       border-bottom: 1px solid #c8c7cc;
+      background: #f7f7f7;
     }
-    .item.active{
+    .item.active {
       background: darken(#fff, 3%);
     }
-    .item:last-of-type{
+    button.button--last {
       bottom: -1px;
     }
     .button--bottom {
       position: absolute;
       bottom: 44px;
     }
-
   }
 }
