--- a/src/pages/driver/driver.scss
+++ b/src/pages/driver/driver.scss
@@ -1,3 +1,7 @@
 page-driver {
-
+  @each $status, $value in map-remove($driverStatus) {
+    ion-card.status[status='#{$status}'] {
+      border-left: 10px solid $value;
+    }
+  }
 }
