--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -21,6 +21,7 @@ $ended: #ce50e1;
 $darken: rgba(0, 0, 0, 0.1);
 $blue: #387ef5;
 
+$offlineWidth: 16px;
 $runStatus: (
   empty: $darken,
   organizing-users: $warning,
@@ -44,9 +45,18 @@ $driverStatus: (
 .wifi-status {
   float: right;
   margin-right: 15px;
-  font-size: 16px;
+  font-size: $offlineWidth;
   margin-top: auto;
   margin-bottom: auto;
   color: $error;
   line-height: 1.5;
+  //position: absolute;
+  //top: 15px;
+  //right: 0;
 }
+ion-navbar{
+  ion-title{
+    display: inline-flex;
+  }
+}
+
